Fix: input not taking all height on Firefox

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ input {
   right: 0;
   bottom: 0;
   width: 100%;
+  height: 100%;
 }
 
 .score {
